[project]
name = "wdmdm-experiments"
version = "0.1.0"
description = "Reproducible environments for the wdmdm numerical experiments"
requires-python = ">=3.10,<3.11"
dependencies = [
    "matplotlib>=3.7",
    "natsort>=8.3",
    "numpy>=1.23",
    "pillow>=9",
    "pytorch-fid==0.3.0",
    "pywavelets>=1.4",
    "scipy>=1.10",
    "setuptools>=69",
    "torch==2.5.1",
    "torchvision==0.20.1",
    "tqdm>=4.65",
]

[dependency-groups]
dev = ["pytest>=8,<9"]

[tool.uv]
package = false

[tool.uv.sources]
torch = [
    { index = "pytorch-cu121", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]
torchvision = [
    { index = "pytorch-cu121", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.pytest.ini_options]
testpaths = ["tests"]
